--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://kit.fontawesome.com/739c5cb6c9.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
@@ -25,7 +29,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <p> Welcome</p>
+    <p>Hello, I am</p>
+    <h1>Jessica Wolski</h1>
+    <h2>Front-end Developer based in Brisbane, Australia</h2>
   </body>
 </html>
