changed content and styled it
changed content and styled homepage "hero"

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello, I am</p>
-    <h1>Jessica Wolski</h1>
-    <h2>Front-end Developer based in Brisbane, Australia</h2>
+    <div class="hero">
+      <p>Hi, I am</p>
+      <h1>Jessica Wolski</h1>
+      <h2 class="mb-5">Front-end Developer based in Brisbane, Australia</h2>
+      <div>
+        <a href="#" class="btn btn-branding"> Get Started </a>
+      </div>
+    </div>
   </body>
 </html>
