--- a/index.html
+++ b/index.html
@@ -37,5 +37,68 @@
         <a href="#" class="btn btn-branding"> Get Started </a>
       </div>
     </div>
+    <div class="project">
+      <p class="text-center m-5">See some of my projects featured below</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yoghurt.png" class="img-fluid" alt="">
+          </div>
+      <div class="col">
+        <div class="project-description">
+      <h2 class="mb-5">Yoghurt App</h2>
+      <p class="mb-5" class="text-muted">
+        Far far away, behind the word mountains, far from the countries Vokalia
+        and Consonantia, there live the blind texts. Separated they live in
+        Bookmarksgrove right at the coast of the Semantics, a large language
+        ocean. A small river named Duden flows by
+      </p>
+      <a href="" class="btn btn-branding-outline"> Launch Project</a>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="">
+          </div>
+      <div class="col">
+        <div class="project-description">
+      <h2 class="mb-5">Weather App</h2>
+      <p class="mb-5" class="text-muted">
+        Far far away, behind the word mountains, far from the countries Vokalia
+        and Consonantia, there live the blind texts. Separated they live in
+        Bookmarksgrove right at the coast of the Semantics, a large language
+        ocean. A small river named Duden flows by
+      </p>
+      <a href="" class="btn btn-branding-outline"> Launch Project</a>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="">
+          </div>
+      <div class="col">
+        <div class="project-description">
+      <h2 class="mb-5">Dictionary App</h2>
+      <p class="mb-5" class="text-muted">
+        Far far away, behind the word mountains, far from the countries Vokalia
+        and Consonantia, there live the blind texts. Separated they live in
+        Bookmarksgrove right at the coast of the Semantics, a large language
+        ocean. A small river named Duden flows by
+      </p>
+      <a href="" class="btn btn-branding-outline"> Launch Project</a>
+      </div>
+      </div>
+      </div>
+      </div>
+      </div>
+    </div>
   </body>
 </html>
