--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col">
-          <div class="about-section-content">
+          <div class="content">
             <h1>Hello I am Jessica Wolski</h1>
             <h2 class="mt-5">Front-end Developer based in Australia</h2>
             <p class="mt-5">
