--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+    <nav class="d-flex justify-content-end">
+    <ul>
+      <li class="active">
+        <a href=""> Home</a>
+      </li>
+      <li>
+      <a href="/about.html"> About</a>
+      </li>
+      <li>
+      <a href="/work.html"> Work</a>
+      </li>
+      <li>
+        <a href="/contact.html"> Contact</a>
+      </li>
+    </ul>
+    </nav>
+    </div>
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Jessica Wolski</h1>
