--- a/index.html
+++ b/index.html
@@ -117,6 +117,25 @@
       </div>
       </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4> Work Enquiry</h4>
+          <p class="text-muted"> Let's work together</p>
+          </div>
+          <div>
+          <a href="" class="btn btn-branding"> Contact me</a>
+          </div>
+        <div class="d-flex justify-content-center">
+        <a href="mailto:i_am_jess88@hotmail.com" class="email-link">i_am_jess88@hotmail.com</a>
+        </div>
+        <div class="social-links text-center d-flex justify-content-center">
+        <a href="www.instagram.com/jesswolski" target="blank"> <i class="fab fa-instagram"></i></a>
+        <a href="www.github.com/jesswolski" target="blank"> <i class="fab fa-github"></i></a>
+        <a href="www.facebook.com/jesswolskicode" target="blank"> <i class="fab fa-facebook"></i></a>
+        </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
