added nav bar to other pages
added nav bar to other pages

--- a/about.html
+++ b/about.html
@@ -29,6 +29,24 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-end">
+        <ul>
+          <li>
+            <a href="" title="homepage"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Jessica"> About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="About Jessica's work"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Jessica"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col">
