--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="Jessica Wolski professionally trained front-end developer that is in Brisbane,Australia" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,23 +26,23 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Front-end developer Jessica Wolski</title>
   </head>
   <body>
     <div class="container">
     <nav class="d-flex justify-content-end">
     <ul>
-      <li class="active">
+      <li class="active" title="Homepage">
         <a href=""> Home</a>
       </li>
       <li>
-      <a href="/about.html"> About</a>
+      <a href="/about.html" title="About Jessica"> About</a>
       </li>
       <li>
-      <a href="/work.html"> Work</a>
+      <a href="/work.html" title="About Jessica's work"> Work</a>
       </li>
       <li>
-        <a href="/contact.html"> Contact</a>
+        <a href="/contact.html" title="Contact Jessica"> Contact</a>
       </li>
     </ul>
     </nav>
@@ -120,7 +120,7 @@
       <footer>
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
           <div>
-          <h4> Work Enquiry</h4>
+          <h3> Work Enquiry</h3>
           <p class="text-muted"> Let's work together</p>
           </div>
           <div>
