--- a/work.html
+++ b/work.html
@@ -29,6 +29,24 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-end">
+        <ul>
+          <li>
+            <a href="" title="homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Jessica"> About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="About Jessica's work"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Jessica"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
