--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <nav class="d-flex justify-content-end">
         <ul>
           <li>
-            <a href="" title="homepage"> Home</a>
+            <a href="/index.html" title="homepage"> Home</a>
           </li>
           <li class="active">
             <a href="/about.html" title="About Jessica"> About</a>
