added to footer and SEO to other parts of home page
added to footer and also added some SEO to other parts of home page

--- a/index.html
+++ b/index.html
@@ -124,16 +124,19 @@
           <p class="text-muted"> Let's work together</p>
           </div>
           <div>
-          <a href="" class="btn btn-branding"> Contact me</a>
+          <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Jessica Wolski"> Contact me</a>
           </div>
-        <div class="d-flex justify-content-center">
-        <a href="mailto:i_am_jess88@hotmail.com" class="email-link">i_am_jess88@hotmail.com</a>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:i_am_jess88@hotmail.com" class="email-link" title="email Jessica Wolski">i_am_jess88@hotmail.com</a>
         </div>
         <div class="social-links text-center d-flex justify-content-center">
-        <a href="www.instagram.com/jesswolski" target="blank"> <i class="fab fa-instagram"></i></a>
-        <a href="www.github.com/jesswolski" target="blank"> <i class="fab fa-github"></i></a>
-        <a href="www.facebook.com/jesswolskicode" target="blank"> <i class="fab fa-facebook"></i></a>
+        <a href="www.instagram.com/jesswolski" target="blank" title="instragram profile"> <i class="fab fa-instagram"></i></a>
+        <a href="www.github.com/jesswolski" target="blank" title="github profile"> <i class="fab fa-github"></i></a>
+        <a href="www.facebook.com/jesswolskicode" target="blank" title="facebook profile"> <i class="fab fa-facebook"></i></a>
         </div>
+        <p> This project was coded by Jessica Wolski and is
+        <a href="https://github.com/Jessw1988/portfolio-project-new" target="blank"> Open sourced</a>
+        </p>
         </div>
       </footer>
     </div>
