--- a/work.html
+++ b/work.html
@@ -52,22 +52,22 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid" alt="" />
+            <img src="images/weather.png" class="img-fluid" alt="weather project preview" />
             <h3 class="text-center">Weather App</h3>
             <p class="text-center text-muted">Built with HTML,CSS and Javascript</p>
             </div>
                <div class="col-md-6 mb-4">
-            <img src="images/weatheralternate.png" class="img-fluid" alt="" />
+            <img src="images/weatheralternate.png" class="img-fluid" alt="translator project preview" />
             <h3 class="text-center">Translator App</h3>
             <p class="text-center text-muted">Built with HTML,CSS and React</p>
             </div>
             <div class="col-md-6 mb-4">
-            <img src="images/dictionary.png" class="img-fluid" alt="" />
+            <img src="images/dictionary.png" class="img-fluid" alt="dictionary project preview" />
             <h3 class="text-center">Dictionary App</h3>
             <p class="text-center text-muted">Built with HTML,CSS and React</p>
             </div>
             <div class="col-md-6 mb-4">
-            <img src="images/yoghurt.png" class="img-fluid" alt="" />
+            <img src="images/yoghurt.png" class="img-fluid" alt="yoghurt project preview" />
             <h3 class="text-center">Yoghurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
             </div>
