added classes to p in footer
added classes to p in footer

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <a href="www.github.com/jesswolski" target="blank" title="github profile"> <i class="fab fa-github"></i></a>
         <a href="www.facebook.com/jesswolskicode" target="blank" title="facebook profile"> <i class="fab fa-facebook"></i></a>
         </div>
-        <p> This project was coded by Jessica Wolski and is
+        <p class="text-center mt-5"> This project was coded by Jessica Wolski and is
         <a href="https://github.com/Jessw1988/portfolio-project-new" target="blank"> Open sourced</a>
         </p>
         </div>
