fixed navigation and links and added further SEO
fixed navigation and links and added further SEO

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
       </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
           <div>
           <h3> Work Enquiry</h3>
@@ -138,7 +138,7 @@
         <a href="https://github.com/Jessw1988/portfolio-project-new" target="blank"> Open sourced</a>
         </p>
         </div>
+        </div>
       </footer>
-    </div>
   </body>
 </html>
