--- a/about.html
+++ b/about.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="Jessica Wolski picture about Brisbane Australia front-end developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,7 +29,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>More about Jessica Wolski Front-end Developer</title>
   </head>
   <body>
     <div class="container">
@@ -59,11 +62,15 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="" class="btn btn-branding"> View my Projects</a>
+            <a href="/work.html" class="btn btn-branding"> View my Projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" class="img-fluid" alt="" />
+          <img
+            src="images/patricia.png"
+            class="img-fluid"
+            alt="patricia image"
+          />
         </div>
       </div>
     </div>
