--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="Jessica Wolski professionally trained front-end developer that is in Brisbane,Australia" />
+    <meta
+      name="viewport"
+      content="Jessica Wolski professionally trained front-end developer that is in Brisbane,Australia"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,22 +33,22 @@
   </head>
   <body>
     <div class="container">
-    <nav class="d-flex justify-content-end">
-    <ul>
-      <li class="active" title="Homepage">
-        <a href=""> Home</a>
-      </li>
-      <li>
-      <a href="/about.html" title="About Jessica"> About</a>
-      </li>
-      <li>
-      <a href="/work.html" title="About Jessica's work"> Work</a>
-      </li>
-      <li>
-        <a href="/contact.html" title="Contact Jessica"> Contact</a>
-      </li>
-    </ul>
-    </nav>
+      <nav class="d-flex justify-content-end">
+        <ul>
+          <li class="active" title="Homepage">
+            <a href=""> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Jessica"> About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="About Jessica's work"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Jessica"> Contact</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="hero">
       <p>Hi, I am</p>
@@ -57,88 +60,118 @@
     </div>
     <div class="project">
       <p class="text-center m-5">See some of my projects featured below</p>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/yoghurt.png" class="img-fluid" alt="">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
+            <img src="images/yoghurt.png" class="img-fluid" alt="" />
           </div>
-      <div class="col">
-        <div class="project-description">
-      <h2 class="mb-5">Yoghurt App</h2>
-      <p class="mb-5" class="text-muted">
-        Far far away, behind the word mountains, far from the countries Vokalia
-        and Consonantia, there live the blind texts. Separated they live in
-        Bookmarksgrove right at the coast of the Semantics, a large language
-        ocean. A small river named Duden flows by
-      </p>
-      <a href="" class="btn btn-branding-outline"> Launch Project</a>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="">
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Yoghurt App</h2>
+              <p class="mb-5" class="text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a href="" class="btn btn-branding-outline"> Launch Project</a>
+            </div>
           </div>
-      <div class="col">
-        <div class="project-description">
-      <h2 class="mb-5">Weather App</h2>
-      <p class="mb-5" class="text-muted">
-        Far far away, behind the word mountains, far from the countries Vokalia
-        and Consonantia, there live the blind texts. Separated they live in
-        Bookmarksgrove right at the coast of the Semantics, a large language
-        ocean. A small river named Duden flows by
-      </p>
-      <a href="" class="btn btn-branding-outline"> Launch Project</a>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="">
+        </div>
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
+            <img src="images/weather.png" class="img-fluid" alt="" />
           </div>
-      <div class="col">
-        <div class="project-description">
-      <h2 class="mb-5">Dictionary App</h2>
-      <p class="mb-5" class="text-muted">
-        Far far away, behind the word mountains, far from the countries Vokalia
-        and Consonantia, there live the blind texts. Separated they live in
-        Bookmarksgrove right at the coast of the Semantics, a large language
-        ocean. A small river named Duden flows by
-      </p>
-      <a href="" class="btn btn-branding-outline"> Launch Project</a>
-      </div>
-      </div>
-      </div>
-      </div>
-      </div>
-      <footer class="container">
-        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
-          <div>
-          <h3> Work Enquiry</h3>
-          <p class="text-muted"> Let's work together</p>
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Weather App</h2>
+              <p class="mb-5" class="text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a href="" class="btn btn-branding-outline"> Launch Project</a>
+            </div>
           </div>
-          <div>
-          <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Jessica Wolski"> Contact me</a>
+        </div>
+        <div class="row mb-5">
+          <div class="col d-none d-lg-block">
+            <img src="images/dictionary.png" class="img-fluid" alt="" />
           </div>
+          <div class="col">
+            <div class="project-description">
+              <h2 class="mb-5">Dictionary App</h2>
+              <p class="mb-5" class="text-muted">
+                Far far away, behind the word mountains, far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a href="" class="btn btn-branding-outline"> Launch Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="container">
+      <div
+        class="contact-box d-flex flex-column justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Enquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Jessica Wolski"
+          >
+            Contact me</a
+          >
+        </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:i_am_jess88@hotmail.com" class="email-link" title="email Jessica Wolski">i_am_jess88@hotmail.com</a>
+          <a
+            href="mailto:i_am_jess88@hotmail.com"
+            class="email-link"
+            title="email Jessica Wolski"
+            >i_am_jess88@hotmail.com</a
+          >
         </div>
         <div class="social-links text-center d-flex justify-content-center">
-        <a href="www.instagram.com/jesswolski" target="blank" title="instragram profile"> <i class="fab fa-instagram"></i></a>
-        <a href="www.github.com/jesswolski" target="blank" title="github profile"> <i class="fab fa-github"></i></a>
-        <a href="www.facebook.com/jesswolskicode" target="blank" title="facebook profile"> <i class="fab fa-facebook"></i></a>
+          <a
+            href="https://www.instagram.com/jesswolski"
+            target="_blank"
+            title="instragram profile"
+          >
+            <i class="fab fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.github.com/jesswolski"
+            target="_blank"
+            title="github profile"
+          >
+            <i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/jesswolskicode"
+            target="_blank"
+            title="facebook profile"
+          >
+            <i class="fab fa-facebook"></i
+          ></a>
         </div>
-        <p class="text-center mt-5"> This project was coded by Jessica Wolski and is
-        <a href="https://github.com/Jessw1988/portfolio-project-new" target="blank"> Open sourced</a>
+        <p class="text-center mt-5">
+          This project was coded by Jessica Wolski and is
+          <a
+            href="https://github.com/Jessw1988/portfolio-project-new"
+            target="_blank"
+          >
+            Open sourced</a
+          >
         </p>
-        </div>
-        </div>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
