changed about page to be more responsive
made some changes on the about page css to be more responsive

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <a href="/work.html" class="btn btn-branding"> View my Projects</a>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-none d-lg-block">
           <img
             src="images/patricia.png"
             class="img-fluid"
