changed image to my own
changed image to my own

--- a/about.html
+++ b/about.html
@@ -67,9 +67,10 @@
         </div>
         <div class="col-lg-6 d-none d-lg-block">
           <img
-            src="images/patricia.png"
+            src="images/mypic.jpg"
             class="img-fluid"
-            alt="patricia image"
+            id="me_img"
+            alt="Jessica Wolski image"
           />
         </div>
       </div>
